fixed overflow issue locally, testing for deployment

--- a/src/components/Home/intro.css
+++ b/src/components/Home/intro.css
@@ -61,18 +61,14 @@
 }
 
 .profile-picture {
-    display: flex;
-    justify-content: center;
-    margin-top: 30px;
-    width: 100%;
-    height: 100%;
+    border: none;
     border-radius: 50%;
-    box-shadow: -3px 2px 30px black;
+    max-width: 90vw;
+    box-shadow: -2px 10px 20px black;
 }
 
-img {
-    max-height: 375px;
-    max-width: 375px;
+.profile-picture-container {
+    padding: 20px;
 }
 
 @media (800px <= width){
