--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+* {
+  overflow-x: hidden;
+}
 html {
   min-height: 100vh;
   min-width: 100vw;
-  overflow-x: hidden;
+ 
 }
 
 body {
@@ -12,4 +15,5 @@ body {
   width: 100%;
   font-family: "Montserrat", sans-serif;
   display: initial;
+  overflow-x: hidden;
 }
